# Rex-Programming-Lang

./: LICENSE  README.md  pyproject.toml
examples/: api_fetch.rex  hello.rex  variables.rex
rex/: cli.py  interpreter.py
tests/: test_interpreter.py
