
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rex-lang"
version = "0.1.0"
description = "Rex — a tiny, friendly scripting language for API work. Made in Mzansi 🇿🇦"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Andile Mtolo (ToxicDeeModder)", email = "alysium.corporation.studios@gmail.com"}
]
maintainers = [
    {name = "Alysium Corp Studios ZA inc"}
]
keywords = ["rex", "scripting", "api", "automation", "mzansi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Internet",
]
dependencies = [
    "requests>=2.28"
]

[project.urls]
Homepage = "https://github.com/alysiumcorporationstudios/Rex-Programming-Lang"
Repository = "https://github.com/alysiumcorporationstudios/Rex-Programming-Lang/tree/main"
Issues = "https://github.com/alysiumcorporationstudios/Rex-Programming-Lang/issues"

[project.scripts]
rex = "rex.cli:main"

[tool.setuptools.packages]
find = {}
